[DREM-47]クリップ登録・解除処理
クリップ画面、おすすめ、検索、番組表にクリップボタン表示、その他クリップ処理エラー修正

Change-Id: I596d1c8fd54a3ba595a6b669f911f75277cf8d99

--- a/dTVTerminalApp/app/src/main/res/layout/home/layout/item_recommend_list.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/home/layout/item_recommend_list.xml
@@ -20,13 +20,15 @@
 			android:layout_height="wrap_content"
 			android:layout_centerVertical="true" />
 
-		<Button
+		<ImageView
 			android:id="@+id/recommend_bt_clip"
-			android:layout_width="25dp"
-			android:layout_height="25dp"
+			android:layout_width="@dimen/clip_button_size"
+			android:layout_height="@dimen/clip_button_size"
 			android:layout_alignParentRight="true"
 			android:layout_centerVertical="true"
-			android:layout_marginRight="5dp"/>
+			android:clickable="true"
+			android:src="@mipmap/icon_circle_opacity_clip"
+			android:layout_margin="@dimen/clip_common_margin"/>
 
 		<LinearLayout
 			android:id="@+id/recommend_title_des"
