[DREM-47]クリップ登録・解除処理
レンタル、ビデオ一覧のクリップしょる実装、その他クリップ処理エラー修正

Change-Id: I55f90fda146c770c1624ac70e666494f0455a282

--- a/dTVTerminalApp/app/src/main/res/layout/home/layout/item_common_result.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/home/layout/item_common_result.xml
@@ -50,6 +50,7 @@
             android:layout_width="@dimen/clip_button_size"
             android:layout_height="@dimen/clip_button_size"
             android:layout_marginEnd="@dimen/recorded_clip_tv_margin_end"
+            android:clickable="true"
             android:background="@color/list_item_background" />
 
         <TextView
