--- a/dTVTerminalApp/app/src/main/res/layout/home/layout/item_recommend_list.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/home/layout/item_recommend_list.xml
@@ -21,7 +21,7 @@
 			android:layout_centerVertical="true" />
 
 		<ImageView
-			android:id="@+id/recommend_bt_clip"
+			android:id="@+id/recommend_iv_clip"
 			android:layout_width="@dimen/clip_button_size"
 			android:layout_height="@dimen/clip_button_size"
 			android:layout_alignParentRight="true"
@@ -39,7 +39,7 @@
 			android:layout_centerVertical="true"
 			android:layout_marginLeft="5dp"
 			android:layout_marginRight="15dp"
-			android:layout_toLeftOf="@id/recommend_bt_clip"
+			android:layout_toLeftOf="@id/recommend_iv_clip"
 			android:layout_toRightOf="@id/recommend_iv_thumbnail"
 			android:orientation="vertical">
 
