--- a/dTVTerminalApp/app/src/main/res/layout/search/layout/item_search_result_televi.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/search/layout/item_search_result_televi.xml
@@ -17,7 +17,7 @@
             android:layout_centerVertical="true" />
 
         <ImageView
-            android:id="@+id/bt_clip"
+            android:id="@+id/iv_clip"
             android:layout_width="@dimen/clip_button_size"
             android:layout_height="@dimen/clip_button_size"
             android:layout_alignParentRight="true"
@@ -35,7 +35,7 @@
             android:layout_centerVertical="true"
             android:layout_marginLeft="5dp"
             android:layout_marginRight="15dp"
-            android:layout_toLeftOf="@id/bt_clip"
+            android:layout_toLeftOf="@id/iv_clip"
             android:layout_toRightOf="@id/iv_thumbnail"
             android:orientation="vertical">
 
