DREM-937 [実装]([DREM-51]設定TOP画面)実装・実装レビュー
設定画面TOPの、リストの背景色と区切り線の色を修正

Change-Id: I11528e9ea33ff1408d0797242c703e66ca975119

--- a/dTVTerminalApp/app/src/main/res/layout/other/layout/setting_main_layout.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/other/layout/setting_main_layout.xml
@@ -8,8 +8,8 @@
         android:id="@+id/main_setting_list"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:divider="@color/white_text"
+        android:divider="@color/setting_list_divider_color"
         android:dividerHeight="1dp"
-        android:background="@drawable/color_black">
+        android:background="@color/setting_list_background_color">
     </ListView>
 </LinearLayout>
