--- a/dTVTerminalApp/app/src/main/res/layout/other/layout/setting_main_layout.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/other/layout/setting_main_layout.xml
@@ -9,7 +9,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:divider="@color/setting_list_divider_color"
-        android:dividerHeight="1dp"
+        android:dividerHeight="@dimen/main_setting_list_divider_height"
         android:background="@color/setting_list_background_color">
     </ListView>
 </LinearLayout>
