--- a/dTVTerminalApp/app/src/main/res/layout/other/layout/setting_main_list_layout.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/other/layout/setting_main_list_layout.xml
@@ -6,7 +6,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:minHeight="60dp"
+    android:minHeight="@dimen/main_setting_list_height"
     android:background="@drawable/color_black">
     <TextView
         android:id="@+id/setting_main_text"
@@ -32,6 +32,6 @@
         android:layout_centerVertical="true"
         android:layout_marginEnd="@dimen/main_setting_text_end_margin"
         android:textAlignment="textEnd"
-        android:textSize="14sp"
+        android:textSize="@dimen/main_setting_list_status_textsize"
         android:textColor="@color/white_text"/>
 </RelativeLayout>
