DREM-1008 検索画面で文字列変更されるたびに一瞬0件表示になる
タブを切り替えた場合は検索結果が取得できるまでは「○○件」は表示しない対応を追加

Change-Id: I34e9afed704e0a72df531596ab1b116cfe3c90d7

--- a/dTVTerminalApp/app/src/main/res/layout/search/layout/fragment_televi_content.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/search/layout/fragment_televi_content.xml
@@ -13,7 +13,9 @@
 		android:layout_marginLeft="20dp"
 		android:text="検索結果:0件"
 		android:textColor="@android:color/white"
-		android:textSize="13dp"/>
+		android:textSize="13dp"
+		android:visibility="invisible"
+		/>
 
 	<TextView
 		android:layout_width="match_parent"
