--- a/dTVTerminalApp/app/src/main/res/layout/tvprogram/layout/tv_program_list_main_layout.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/tvprogram/layout/tv_program_list_main_layout.xml
@@ -87,4 +87,13 @@
             android:textColor="@android:color/holo_red_dark"
             android:textStyle="bold" />
     </com.nttdocomo.android.tvterminalapp.model.program.ChangeModeActionButton>
+
+    <TextView
+        android:id="@+id/tv_program_list_main_layout_tip_tv"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textColor="@android:color/white"
+        android:layout_centerInParent="true"
+        android:text="@string/tv_program_tip"
+        android:visibility="gone"/>
 </RelativeLayout>
