DREM-1081 [実装]([DREM-24-1]録画予約一覧(受付済み予約のテキスト表示領域拡張))実装 いつしか対応コミットが上書きされてしまっていた為、再度マージします。
Change-Id: Ibeff5b3116e4b4a2c10919d77c460deec2447407

--- a/dTVTerminalApp/app/src/main/res/layout/home/layout/record_reservation_list_main_layout.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/home/layout/record_reservation_list_main_layout.xml
@@ -18,18 +18,10 @@
             android:textSize="@dimen/list_item_time_text_size"
             android:textColor="@color/content_time_text"/>
     </RelativeLayout>
-    <View
-        android:id="@+id/record_reservation_list_border"
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:layout_marginTop="5dp"
-        android:layout_below="@id/record_reservation_list_update_time"
-        android:background="@color/result_line"/>
     <ListView
         android:id="@+id/record_reservation_list_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_below="@id/record_reservation_list_border">
+        android:layout_height="match_parent">
     </ListView>
 
 </LinearLayout>
