--- a/dTVTerminalApp/app/src/main/res/layout/search/layout/fragment_televi_content.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/search/layout/fragment_televi_content.xml
@@ -11,11 +11,9 @@
 		android:layout_marginTop="6dp"
 		android:layout_marginBottom="6dp"
 		android:layout_marginLeft="20dp"
-		android:text="検索結果:0件"
 		android:textColor="@android:color/white"
 		android:textSize="13dp"
-		android:visibility="invisible"
-		/>
+		android:visibility="invisible" />
 
 	<TextView
 		android:layout_width="match_parent"
