--- a/dTVTerminalApp/app/src/main/res/layout/launch/layout/nav_item_lv_menu_program.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/launch/layout/nav_item_lv_menu_program.xml
@@ -31,8 +31,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:visibility="gone"
-            android:layout_centerVertical="true"
-            android:layout_marginStart="@dimen/global_menu_list_item_title_icon_left_margin" />
+            android:layout_centerVertical="true" />
 
         <ImageView
             android:id="@+id/iv_arrow"
