DREM-1179 [実装]([DREM-52]ヘッダー対応)実装(戻るボタン非表示)・実装レビュー
ヘッダーの戻るアイコンがTextViewだったので画像アイコンを表示するように修正
Inspect Code、FindBugs対応
レイアウトファイルのリファクタリングとハードコーディングを修正

Change-Id: I3a03ca2033da1d7f8587c34ba60a3a2bdfbd3b3c

--- a/dTVTerminalApp/app/src/main/res/values/dimens.xml
+++ b/dTVTerminalApp/app/src/main/res/values/dimens.xml
@@ -34,6 +34,10 @@
     <dimen name="global_menu_list_item_title_icon_left_margin">32dp</dimen>
 
     <!--Common-->
+    <dimen name="main_header_title_text_size">17sp</dimen>
+    <dimen name="main_header_back_icon_size">50dp</dimen>
+    <dimen name="main_header_menu_padding_vertical">12dp</dimen>
+    <dimen name="main_header_menu_padding_end">15dp</dimen>
     <dimen name="header_title_text_size">16dp</dimen>
     <dimen name="list_item_title_text_size">14sp</dimen>
     <dimen name="list_item_time_text_size">12sp</dimen>
