--- a/dTVTerminalApp/app/src/main/res/layout/home/layout/header_layout.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/home/layout/header_layout.xml
@@ -4,46 +4,37 @@
     android:layout_height="40dp"
     android:background="#FF0000">
 
-    <TextView
+    <ImageView
         android:id="@+id/header_layout_back"
-        android:layout_width="50dp"
+        android:layout_width="@dimen/main_header_back_icon_size"
         android:layout_height="match_parent"
-        android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_centerVertical="true"
-        android:gravity="center"
-        android:clickable="true"
         android:onClick="contentsDetailBackKey"
-        android:text="＜"
-        android:textColor="#FFFFFF"
-        android:visibility="visible" />
+        android:visibility="visible"
+        android:src="@drawable/arrow_left" />
+
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:layout_alignParentRight="true"
-        android:paddingTop="12dp"
-        android:paddingBottom="12dp"
+        android:paddingTop="@dimen/main_header_menu_padding_vertical"
+        android:paddingBottom="@dimen/main_header_menu_padding_vertical"
         android:layout_alignParentEnd="true"
-        android:layout_marginEnd="15dp"
+        android:layout_marginEnd="@dimen/main_header_menu_padding_end"
         android:orientation="horizontal">
-
         <ImageView
             android:id="@+id/header_stb_status_icon"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:layout_centerVertical="true"
             android:contentDescription="@null"
             android:src="@mipmap/ic_stb_status_icon_white"
             android:visibility="invisible" />
-
         <ImageView
             android:id="@+id/header_layout_menu"
-            android:layout_marginLeft="5dp"
             android:layout_marginStart="15dp"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:contentDescription="@null"
-            android:layout_centerVertical="true"
             android:src="@mipmap/ic_menu_white_24dp"
             android:visibility="invisible" />
     </LinearLayout>
@@ -54,6 +45,6 @@
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
         android:textColor="#FFFFFF"
-        android:textSize="17dp"
+        android:textSize="@dimen/main_header_title_text_size"
         android:textStyle="bold" />
 </RelativeLayout>
