--- a/dTVTerminalApp/app/src/main/res/layout/home/layout/activity_base.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/home/layout/activity_base.xml
@@ -4,14 +4,14 @@
     android:layout_height="match_parent">
 
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/base_ll"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
-
-    <include
-        android:id="@+id/base_title"
-        layout="@layout/header_layout" />
+        android:id="@+id/base_ll"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:background="@color/header_background_color_red">
+        <include
+            android:id="@+id/base_title"
+            layout="@layout/header_layout" />
     </LinearLayout>
 
     <RelativeLayout
