--- a/dTVTerminalApp/app/src/main/res/layout/home/layout/header_layout.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/home/layout/header_layout.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="40dp"
-    android:background="#FF0000">
+    android:layout_height="40dp">
 
     <ImageView
         android:id="@+id/header_layout_back"
@@ -12,7 +11,7 @@
         android:layout_centerVertical="true"
         android:onClick="contentsDetailBackKey"
         android:visibility="visible"
-        android:src="@drawable/arrow_left" />
+        android:src="@mipmap/ic_keyboard_arrow_left_white_24dp" />
 
     <LinearLayout
         android:layout_width="wrap_content"
