DREM-1183 [結合]([DREM-52]ヘッダー対応)結合試験実施
コンテンツ詳細画面に関連コンテンツが存在しないため、ダミーのボタンを設置。
関連コンテンツの実装時に削除・差し替え。

Change-Id: I79448217c1708ea3b29fb63b31b7f7ff8c2a5c15

--- a/dTVTerminalApp/app/src/main/res/layout/player/layout/dtv_contents_detail_main_layout.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/player/layout/dtv_contents_detail_main_layout.xml
@@ -104,6 +104,14 @@
                 android:id="@+id/dtv_contents_detail_main_layout_vp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
+
+            <!-- テスト用関連コンテンツボタン. 本実装時に削除 -->
+            <Button
+                android:layout_width="match_parent"
+                android:layout_height="100dp"
+                android:text="関連コンテンツ"
+                android:onClick="testButton" />
+
         </LinearLayout>
     </ScrollView>
 </LinearLayout>
