--- a/dTVTerminalApp/app/src/main/res/layout/launch/layout/daccount_resetting_main_layout.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/launch/layout/daccount_resetting_main_layout.xml
@@ -1,60 +1,97 @@
-<?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
+<?xml version="1.0" encoding="utf-8"?><!--
+  ~ Copyright (c) 2018 NTT DOCOMO, INC. All Rights Reserved.
+  -->
+
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    style="@style/default_layout_style"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="#000000">
 
     <RelativeLayout
+        android:id="@+id/stb_icon_relative_layout"
         android:layout_width="match_parent"
-        android:layout_height="46dp"
-        android:background="#FF0000">
-        <TextView
-            android:id="@+id/titleDAccountReSettingActivity"
+        android:layout_height="@dimen/launch_relative_layout_high_size"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:gravity="center|bottom">
+
+        <FrameLayout
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:text="@string/str_d_account_resetting_title"
-            android:textColor="#FFFFFF"
-            android:textStyle="bold"
-            android:textSize="18sp"/>
+            android:layout_height="wrap_content">
+            <ImageView
+                android:id="@+id/paring_search_image"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/stb_select_d_account_setting_icon" />
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/launch_exclamation_mark_margin"
+                android:src="@drawable/exclamation_mark" />
+        </FrameLayout>
+
     </RelativeLayout>
 
+    <TextView
+        android:id="@+id/d_account_not_registration_message"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/launch_stb_paring_result_layout"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/stb_icon_relative_layout"
+        android:gravity="center"
+        android:text="@string/str_stb_not_registration_account_message"
+        android:textColor="#ffffff"
+        android:textSize="@dimen/launch_text_size" />
 
-    <LinearLayout
-        android:id="@+id/content"
-        android:layout_width="fill_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
-        android:orientation="vertical">
-    </LinearLayout>
+    <TextView
+        android:id="@+id/d_account_registration_help"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/launch_text_layout_high_size"
+        android:layout_below="@id/d_account_not_registration_message"
+        android:layout_marginLeft="@dimen/launch_stb_list_start_margin"
+        android:layout_marginRight="@dimen/launch_stb_list_start_margin"
+        android:background="#FFFFFF"
+        android:gravity="center"
+        android:text="@string/str_stb_d_account_registration_help"
+        android:textColor="#000000" />
 
-    <LinearLayout
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:gravity="bottom"
-        android:orientation="vertical">
+    <TextView
+        android:id="@+id/d_account_input_activation_code"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/launch_text_layout_high_size"
+        android:layout_below="@id/d_account_registration_help"
+        android:layout_marginLeft="@dimen/launch_stb_list_start_margin"
+        android:layout_marginRight="@dimen/launch_stb_list_start_margin"
+        android:layout_marginTop="4dp"
+        android:background="#FFFFFF"
+        android:gravity="center"
+        android:text="@string/str_stb_input_activation_code"
+        android:textColor="#000000" />
 
-        <Button
-            android:id="@+id/otherDAccountDAccounReSettingActivity"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textColor="#FFFFFF"
-            android:text="別のdアカウントを登録する" />
+    <TextView
+        android:id="@+id/d_account_again_pairing"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/launch_text_layout_high_size"
+        android:layout_below="@id/d_account_input_activation_code"
+        android:layout_marginLeft="@dimen/launch_stb_list_start_margin"
+        android:layout_marginRight="@dimen/launch_stb_list_start_margin"
+        android:layout_marginTop="4dp"
+        android:background="#FFFFFF"
+        android:gravity="center"
+        android:text="@string/str_stb_again_pairing"
+        android:textColor="#000000" />
 
-        <Button
-            android:id="@+id/dAccountRegDAccountReSettingActivity"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textColor="#FFFFFF"
-            android:text="STBにdアカウントを登録するには" />
+    <TextView
+        android:id="@+id/d_account_login_other_account"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/launch_text_layout_high_size"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginLeft="@dimen/launch_stb_list_start_margin"
+        android:layout_marginRight="@dimen/launch_stb_list_start_margin"
+        android:background="#FFFFFF"
+        android:gravity="center"
+        android:text="@string/str_stb_login_other_account"
+        android:textColor="#000000" />
 
-        <Button
-            android:id="@+id/returnDAccountReSettingActivity"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textColor="#FFFFFF"
-            android:text="戻る" />
-    </LinearLayout>
-
-</LinearLayout>
+</RelativeLayout>
