DREM-767 クリップ状態の反映
クリップ登録成功後の状態遷移を実装

Change-Id: I1015073509388b8ef21be27a59ab5656b1ff91c9

--- a/dTVTerminalApp/app/src/main/res/layout/home/layout/item_common_result.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/home/layout/item_common_result.xml
@@ -45,7 +45,7 @@
         android:layout_alignParentEnd="true"
         android:layout_centerVertical="true">
 
-        <TextView
+        <ImageView
             android:id="@+id/item_common_result_clip_tv"
             android:layout_width="@dimen/clip_button_size"
             android:layout_height="@dimen/clip_button_size"
