DREM-3-3 ■持ち出し処理（UI更新）
Change-Id: I101be541b22d1b33689f106c6f968f69421ce4d8

--- a/dTVTerminalApp/app/src/main/res/layout/home/layout/record_list_main_layout.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/home/layout/record_list_main_layout.xml
@@ -47,7 +47,7 @@
             android:layout_centerHorizontal="true"
             android:layout_centerVertical="true" />
 
-        <!-- 仕様通りに表示させるため、一時↓のように構成 -->
+        <!-- 仕様通りに表示させるため、一時↓のように構成
         <com.nttdocomo.android.tvterminalapp.model.program.ChangeModeActionButton
             android:id="@+id/recorded_List_filtering_layout_button"
             android:layout_width="match_parent"
@@ -64,6 +64,6 @@
                 android:scaleType="fitCenter"
                 android:src="@mipmap/ic_fiber_manual_record_white_24dp"/>
 
-        </com.nttdocomo.android.tvterminalapp.model.program.ChangeModeActionButton>
+        </com.nttdocomo.android.tvterminalapp.model.program.ChangeModeActionButton>-->
     </RelativeLayout>
 </LinearLayout>
