--- a/dTVTerminalApp/app/src/main/res/layout/tvprogram/layout/tv_program_item_panel.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/tvprogram/layout/tv_program_item_panel.xml
@@ -30,8 +30,8 @@
 
         <ImageView
             android:id="@+id/tv_program_item_panel_clip_iv"
-            android:layout_width="@dimen/clip_button_size"
-            android:layout_height="@dimen/clip_button_size"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_below="@id/tv_program_item_panel_clip_tv"
             android:layout_centerHorizontal="true"
             android:layout_marginLeft="7dp"
