[結合]([DREM-35]レイアウト指示書の適用)ペアリング画面
ペアリング画面レイアウト修正

Change-Id: I1d0b907d5a0dc878df18ca0bca4bb8836c318f58

--- a/dTVTerminalApp/app/src/main/res/layout/home/layout/item_common_result.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/home/layout/item_common_result.xml
@@ -167,6 +167,7 @@
         android:id="@+id/item_common_result_device_name"
         android:layout_width="match_parent"
         android:layout_height="@dimen/launch_text_layout_high_size"
+        android:textSize="@dimen/launch_stb_device_font_size"
         android:gravity="center_vertical|start"
         android:background="@drawable/selector_btn_click_bg"
         android:textColor="@drawable/selector_text_click_bg"
