--- a/dTVTerminalApp/app/src/main/res/layout/launch/layout/stb_connect_main_layout.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/launch/layout/stb_connect_main_layout.xml
@@ -5,7 +5,7 @@
 
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
-    android:background="#000000"
+    android:background="@color/stb_select_black_color"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
     <RelativeLayout
@@ -14,9 +14,9 @@
         android:id="@+id/stb_icon_relative_layout">
         <ImageView
             android:id="@+id/paring_connecting_image"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/paring_connecting_icon"
+            android:layout_width="@dimen/launch_stb_start_up_icon3_width"
+            android:layout_height="@dimen/launch_stb_start_up_icon2_high"
+            android:src="@mipmap/paring_connecting_icon"
             android:baselineAlignBottom="true"
             android:layout_alignParentBottom="true"
             android:layout_centerHorizontal="true"
@@ -28,7 +28,7 @@
         android:layout_width="match_parent"
         android:layout_height="@dimen/launch_stb_paring_result_layout"
         android:text="@string/str_stb_connect_success_text"
-        android:textColor="#FFFFFF"
+        android:textColor="@color/stb_select_white_color"
         android:gravity="center"
         android:textSize="@dimen/launch_text_size"
         android:layout_below="@+id/stb_icon_relative_layout"
