--- a/dTVTerminalApp/app/src/main/res/layout/launch/layout/stb_select_main_layout.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/launch/layout/stb_select_main_layout.xml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:background="#000000"
+    android:background="@color/stb_select_black_color"
     android:layout_height="match_parent">
 
     <RelativeLayout
@@ -11,9 +11,9 @@
         android:id="@+id/stb_icon_relative_layout">
         <ImageView
             android:id="@+id/paring_search_image"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/paring_search_icon"
+            android:layout_width="@dimen/launch_stb_start_up_icon1_width"
+            android:layout_height="@dimen/launch_stb_start_up_icon1_high"
+            android:src="@mipmap/paring_search_icon"
             android:baselineAlignBottom="true"
             android:layout_alignParentBottom="true"
             android:layout_centerHorizontal="true"
@@ -25,7 +25,9 @@
         android:layout_width="match_parent"
         android:layout_height="@dimen/launch_stb_paring_result_layout"
         android:text="@string/str_stb_select_result_text_search"
-        android:textColor="#ffffff"
+        android:textColor="@color/stb_select_white_color"
+        android:layout_marginStart="@dimen/launch_image_bottom_margin"
+        android:layout_marginEnd="@dimen/launch_image_bottom_margin"
         android:gravity="center"
         android:textSize="@dimen/launch_text_size"
         android:layout_below="@+id/stb_icon_relative_layout"
@@ -41,7 +43,7 @@
         <TextView
             android:id="@+id/stb_select_status_selected_text"
             android:layout_width="match_parent"
-            android:layout_height="40dp"
+            android:layout_height="@dimen/launch_text_layout_high_size"
             android:layout_marginRight="@dimen/launch_stb_list_start_margin"
             android:layout_marginLeft="@dimen/launch_stb_list_start_margin"
             android:layout_marginBottom="@dimen/launch_text_bottom_margin"
@@ -58,7 +60,7 @@
             android:layout_alignEnd="@+id/stb_select_status_selected_text"
             android:layout_height="wrap_content"
             android:paddingStart="@dimen/launch_text_end_padding"
-            android:paddingEnd="@dimen/launch_text_right_padding"
+            android:paddingEnd="@dimen/launch_text_left_padding"
             android:src="@drawable/remote_paring_device_check_mark"
             android:layout_alignBottom="@+id/stb_select_status_selected_text"
             android:layout_alignParentTop="true"
@@ -70,7 +72,7 @@
         style="?android:attr/progressBarStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:padding="15dp"
+        android:padding="@dimen/launch_stb_progress_bar_padding"
         android:layout_below="@+id/stb_device_selected"
         android:layout_centerHorizontal="true" />
 
@@ -78,6 +80,7 @@
         android:id="@+id/stb_device_name_list"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/launch_stb_margin_top"
         android:layout_below="@id/stb_device_progress"
         android:layout_above="@+id/checkBoxSTBSelectActivity">
     </ListView>
@@ -85,14 +88,16 @@
     <CheckBox
         android:id="@+id/checkBoxSTBSelectActivity"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/launch_text_layout_high_size"
+        android:layout_height="@dimen/launch_stb_checkbox_high"
         android:layout_marginLeft="@dimen/launch_stb_list_start_margin"
         android:layout_marginRight="@dimen/launch_stb_list_start_margin"
         android:text="@string/str_stb_next_not_display_text"
-        android:textColor="#FFFFFF"
+        android:textColor="@color/stb_select_white_color"
         android:theme="@style/CheckBox"
         android:layout_marginBottom="@dimen/launch_stb_checkbox_bottom_margin"
         android:layout_marginTop="@dimen/launch_stb_checkbox_top_margin"
+        android:paddingStart="@dimen/launch_stb_checkbox_right_margin"
+        android:paddingEnd="@dimen/launch_text_end_padding"
         android:layout_above="@+id/useWithoutPairingSTBParingInvitation"
         android:layout_centerHorizontal="true" />
 
@@ -102,10 +107,12 @@
         android:layout_height="@dimen/launch_text_layout_high_size"
         android:layout_marginLeft="@dimen/launch_stb_list_start_margin"
         android:layout_marginRight="@dimen/launch_stb_list_start_margin"
-        android:background="#FFFFFF"
+        android:layout_marginBottom="@dimen/launch_stb_list_start_margin"
+        android:background="@color/stb_select_white_color"
         android:gravity="center"
         android:text="@string/str_stb_no_pair_use_text"
-        android:textColor="#000000"
+        android:textColor="@color/stb_select_black_color"
+        android:textSize="@dimen/launch_text_size"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true" />
 
@@ -115,11 +122,11 @@
         android:layout_height="@dimen/launch_text_layout_high_size"
         android:layout_marginLeft="@dimen/launch_stb_list_start_margin"
         android:layout_marginRight="@dimen/launch_stb_list_start_margin"
-        android:layout_marginBottom="@dimen/launch_text_bottom_margin"
-        android:background="#FFFFFF"
+        android:layout_marginBottom="@dimen/launch_image_bottom_margin"
+        android:background="@color/stb_select_white_color"
         android:gravity="center"
         android:text="@string/str_d_account_app_download"
-        android:textColor="#000000"
+        android:textColor="@color/stb_select_black_color"
         android:layout_above="@+id/useWithoutPairingSTBParingInvitation"
         android:layout_centerHorizontal="true"
         android:visibility="gone" />
