DREM-1417 [実装]([DREM-35]レイアウト指示書の適用)BaseActivity
ヘッダーのタイトルにて、タイトル名が長い場合に3点表記がされないOSがあったため修正をしました

Change-Id: I64bcd1034fc40771ade0c823429eba09f1269ae9

--- a/dTVTerminalApp/app/src/main/res/values/styles.xml
+++ b/dTVTerminalApp/app/src/main/res/values/styles.xml
@@ -19,6 +19,15 @@
         <item name="android:textColor">#ffffff</item>
     </style>
 
+    <style name="autoscroll">
+        <item name="android:singleLine">true</item>
+        <item name="android:ellipsize">marquee</item>
+        <item name="android:marqueeRepeatLimit">marquee_forever</item>
+        <item name="android:focusable">true</item>
+        <item name="android:focusableInTouchMode">true</item>
+        <item name="android:scrollHorizontally">true</item>
+    </style>
+
     <!--検索画面アイテムRatingBar -->
     <style name="roomRatingBar" parent="@android:style/Widget.RatingBar">
         <item name="android:progressDrawable">@drawable/video_item_ratingbar</item>
